--- a/estilos.css
+++ b/estilos.css
@@ -57,11 +57,13 @@ h2 {
     text-align: center;
     font-size: 40px;
     margin-top: 2%;
+    color: white;
 }
 
 p {
     font-size: 20px;
     padding: 15px;
+    color: white;
 }
 
 .sobreMi {
@@ -73,8 +75,8 @@ p {
 .contenedorSobreMi {
     height: auto;
     width: 80%;
-    background-color: rgb(0, 183, 255);
-    border-radius: 10%;
+    background-color: rgb(23, 69, 196);
+    border-radius: 10px 10px 10px 10px;
     align-items: center;
     border: 2px solid black;
     box-shadow: 4px 4px 6px black;
@@ -95,8 +97,8 @@ p {
 .contenedorAptutudes {
     height: auto;
     width: 80%;
-    background-color: rgb(0, 183, 255);
-    border-radius: 10%;
+    background-color: rgb(23, 69, 196);
+    border-radius: 10px 10px 10px 10px;
     align-items: center;
     border: 2px solid black;
     box-shadow: 4px 4px 6px black;
@@ -131,8 +133,8 @@ p {
 .contenedorProyectos {
     height: auto;
     width: 100%;
-    background-color: rgb(0, 183, 255);
-    border-radius: 10%;
+    background-color: rgb(23, 69, 196);
+    border-radius: 10px 10px 10px 10px;
     align-items: center;
     border: 2px solid black;
     box-shadow: 4px 4px 6px black;
@@ -143,7 +145,7 @@ p {
 
 .contenedorProyectos .card {
     margin-bottom: 40px;
-    background-color: rgb(0, 183, 255);
+    background-color: rgb(23, 69, 196);
 }
 
 .imgCarta {
